# victor-terminal

./: .gitignore  README.md  index.html  package-lock.json  package.json
.planning/: AUDIT.md  BUGS-RESEARCH.md  CLAUDE-CLEAR-INPUT.md  CLAUDE-CODE-BINDINGS.md  CTRL-A-DEBUG.md  DESIGN-RESEARCH.md  HANDOFF.md  PHASE2-DESIGN.md  PROJECT-V2.md  RESEARCH.md  ROADMAP.md  SHIFT-ENTER-DEEP.md  SPEC.md  TUI-CODE-REVIEW.md
for-friends/: README.md
scripts/: make-icon.ps1
sessions/: 6ff9c2dc-9db5-4dce-afec-a3e9974a6961.md
src/: App.tsx  Ledger.tsx  Terminal.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_session.rs  ledger.rs  ledger_watcher.rs  lib.rs  main.rs  monitor.rs  pty.rs
src/chat/: Chat.tsx  Message.tsx  PromptBar.tsx  SessionActivity.tsx  Sidebar.tsx  Welcome.tsx  session-reducer.ts  types.ts
